# extract-my-file

./: .gitignore  .pre-commit-config.yaml  .prettierrc.js  1.js  CNAME  Cargo.toml  LICENSE  README.md  index.css  index.html  index.js  package-lock.json  package.json  script.js  style.css  webpack.config.js
js/: index.js
src/: decoder.rs  encoder.rs  lib.rs  source.rs
src_website/: index.html  index.js  style.scss
static/: index.html  style.css
