[package]
name = "extract-my-file"
version = "0.1.0"
authors = ["David Werner <david.werner@blue-yonder.com>","Markus Klein <markus-klein@live.de>"]
edition = "2018"

[lib]
# Use both cdylib and rlib as targets
# cdylib so we can than continue to convert it into webassembly using wasm-bindgen
# rlib so we can make use of advanced native tooling during development
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.47"
libflate = "0.1.25"
